# engineering_docs_bot

./: .gitignore  Cargo.toml  README.md  env.yml.example  package.json  serverless.yml
eddy/: Cargo.toml
eddy/src/: analysis.rs  lib.rs  storage.rs  utils.rs
indexer/: Cargo.toml
indexer/src/: main.rs
slack_bot/: Cargo.toml
slack_bot/src/: main.rs  slack.rs
