[package]
name = "indexer"
version = "0.1.0"
authors = ["Michael Ma"]
edition = "2018"

[dependencies]
eddy = { path = "../eddy" }

failure = "0.1"

git2 = "0.9"

lambda_http = "0.1"
lambda_runtime = "0.2"

log = "0.4"
simple_logger = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

walkdir = "2.2"